@@ -1,4 +1,5 @@
 1.3.5 - TBD
+    * Added paintings rendering
     * The sky light modifier can now be set to zero by typing "0" in the
       text field next to the sky light slider
 
